# heavy-metal-notifier-rs

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  build.rs  diesel.toml
.github/workflows/: nightly.yml  rust.yml
deploy/: .env.example  Dockerfile  compose.yml  metal-releases.service
src/: calendar.rs  config.rs  error.rs  jobs.rs  lib.rs  main.rs
src/model/: calendar.rs  feed.rs  mod.rs  schema.rs
src/model/store/: mod.rs
src/model/store/migrations/2024-09-13-033742_create_calendar/: down.sql  up.sql
src/scraper/: client.rs  metallum.rs  mod.rs  wiki.rs
src/support/: env.rs
src/web/: config.rs  error.rs  handlers_calendar.rs  handlers_general.rs  mod.rs
src/web/templates/: core.rs  general.rs  main.rs  mod.rs
tests/testdata/metallum/: 0.json  100.json  200.json  300.json  400.json  500.json  600.json  700.json  800.json  900.json
web/app/: core.js  package-lock.json  package.json  tailwind.config.js
web/static/: robots.txt  sitemap.xml
web/static/css/: tailwind.css
web/static/js/: core.min.js
