[package]
name = "heavy-metal-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
derive_more = { version = "1.0.0", features = ["from", "display"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"
maud = { version = "*", features = ["axum"] }
reqwest = "0.12.7"
rss = "2.0.9"
scraper = "0.20.0"
time = { version = "0.3.36", features = ["formatting"]}
tokio = { version = "1.40.0", features = ["rt-multi-thread", "signal"] }
tokio-cron-scheduler = { version = "0.11.0", features = ["signal"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url-escape = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
